ensure entire access_token is always visible

--- a/node/public/style.css
+++ b/node/public/style.css
@@ -72,7 +72,6 @@ Item overview
 }
 
 .item-overview__id {
-  white-space: nowrap;
   text-overflow: ellipsis;
   overflow-x: hidden;
 }
